--- a/liver-transplant-findings.ipynb
+++ b/liver-transplant-findings.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4267aac2-51a2-42de-ae1a-b06ac79d4384",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "34d4be50-b6e8-45a8-9cef-869c8e49d866",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5ab39479-33ef-412e-93d7-c8e71bd8772f",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d65014f9-6ba5-4c17-a405-e80b1de7b9b3",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "1167"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "acc6a80f-943b-49b8-870a-ab5111654646",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b7607a3f-1723-47c7-a7be-f3de4b36beba",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6ec8a47d-207e-4b9e-b7f2-5732930d5669",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f11d00de-9762-49a0-bbbb-a8048baef6ca",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "004e5ba7-065f-47f2-ab5e-9155b5276b53",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a14315df-6177-45ed-a0ed-ef10b84b9aed",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "07d689d9-0ac1-4867-b90b-c19bb121b470",
    "metadata": {},
    "outputs": [],
@@ -247,6 +247,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3f659e26-3542-4b93-b5ba-f952f23c3428",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "has_tx\n",
+       "True     242755\n",
+       "False    124257\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['has_tx'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "06da9281-b277-45fa-9e43-55d36827ea3a",
    "metadata": {},
@@ -258,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "855f636c-5959-4a95-aab6-6f0e810f98ec",
    "metadata": {},
    "outputs": [
@@ -282,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "e1185c74-99e2-4999-a128-820c154b4aa5",
    "metadata": {
     "scrolled": true
@@ -294,7 +318,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "cf973c4c-005f-4564-8dcf-9f34e90aa7eb",
    "metadata": {},
    "outputs": [],
@@ -329,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "4a27c8a7-d3ee-48e4-949c-08170b4517cc",
    "metadata": {
     "scrolled": true
@@ -411,7 +435,7 @@
        "4    A1     ABO    C    5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "5b525c05-4ceb-43d7-991f-c39ff45e2607",
    "metadata": {},
    "outputs": [],
@@ -446,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "8e4cfe19-69b4-42fb-8dfd-454287fdb1f5",
    "metadata": {},
    "outputs": [
@@ -570,7 +594,7 @@
        "4           ACADLVLKI     NaN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "aae59625-900e-4b5a-8104-148970dbabf2",
    "metadata": {},
    "outputs": [
@@ -623,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "454c22f0-76ca-4725-831b-a47e6088167d",
    "metadata": {},
    "outputs": [],
@@ -637,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "052995a2-4869-4983-b365-f0b45e1d6e88",
    "metadata": {},
    "outputs": [
@@ -657,7 +681,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "dc16aa92-0e69-4f8a-aed4-49bf68e249b3",
    "metadata": {},
    "outputs": [
@@ -779,7 +803,7 @@
        "92             ALL_DGN  Primary diagnosis was not collected on TCR unt...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "1b17eaca-8f62-4298-9542-f20f0cfdebcf",
    "metadata": {},
    "outputs": [
@@ -871,7 +895,7 @@
        "2586  ALCOHOL-ASSOCIATED CIRRHOSIS WITHOUT ACUTE ALC...  LI_DGN    N  4219"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "c7d97dd5-758e-4ec1-8543-48fa8d9d78f9",
    "metadata": {},
    "outputs": [],
@@ -893,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "9985519f-4982-456a-9e4b-29a99642e97b",
    "metadata": {},
    "outputs": [
@@ -903,7 +927,7 @@
        "{4215, 4216, 4217, 4218, 4219}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "8fdfc7cb-b58b-4e47-9b6a-4dd5c472aaf7",
    "metadata": {},
    "outputs": [],
@@ -935,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "5bf13f65-1b7b-40a9-94e0-d7dbd8a54d24",
    "metadata": {},
    "outputs": [],
@@ -948,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "bb2b6f68-8fc2-4c84-8f1c-6449116ce040",
    "metadata": {},
    "outputs": [],
@@ -968,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "17ddbf77-9077-4360-90ae-6579bc2504c5",
    "metadata": {},
    "outputs": [],
@@ -980,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "7662e8a2-8667-410b-8b9f-f8949061ce13",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "1ffb2e10-3136-4768-b7c4-89fe2467d282",
    "metadata": {},
    "outputs": [],
@@ -1010,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "7ce06f3a-ab75-458b-81a0-e45315de3b18",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "id": "aa23fc9c-240c-407a-82c8-ac9f58303b8e",
    "metadata": {},
    "outputs": [],
@@ -1061,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "33d91a9c-d61d-4001-806f-b4ac645ec87a",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "0829d10b-3954-464c-911f-fb45160b9af3",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "id": "048d4cc4-cfd8-4ede-97d1-75428cf6023f",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "id": "ad2d9496-cc2c-482b-9e03-c7c633dc6a33",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "id": "b3e8c59e-cc14-4374-b92b-157aeb7b4487",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 40,
    "id": "be0622c8-0238-4d88-b579-58ee4a67165e",
    "metadata": {},
    "outputs": [
@@ -1210,7 +1234,7 @@
        "0"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 41,
    "id": "bc187f55-6ea6-48f4-b01f-cc3a3f4fb0ce",
    "metadata": {},
    "outputs": [
@@ -1232,19 +1256,19 @@
        "151237"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# how many records are missing `DONOR_AGE`? (because not every record is a donation\n",
+    "# how many records are missing `DONOR_AGE`? (because not every record is a donation)\n",
     "len(df[df['AGE_DON'].isnull()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 42,
    "id": "e0f6faa7-9ca7-40bf-b110-ee6f427bee59",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 43,
    "id": "2b24e77f-e9ce-4724-a481-b90be76bcedb",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 44,
    "id": "d3c0d478-5c57-4771-999c-273ec2c0a8f0",
    "metadata": {},
    "outputs": [],
@@ -1317,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 45,
    "id": "54128d09-2371-4373-b76c-d4943369619e",
    "metadata": {},
    "outputs": [],
@@ -1327,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 46,
    "id": "a5b508d4-bf78-417f-9cb8-1e13f7364a96",
    "metadata": {},
    "outputs": [
@@ -1337,7 +1361,7 @@
        "25148"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,18 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "fd226089-512d-4d0e-b732-5819820def31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vet this #\n",
-    "assert(cand_30s_count == len(df_30s_uniq_cands))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 49,
    "id": "c81e4c01-0b31-47cf-9301-2a3f06dcb005",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 50,
    "id": "75be345a-8464-4b3c-8bf3-1cca74789c85",
    "metadata": {},
    "outputs": [],
@@ -1390,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 51,
    "id": "43fc2c19-5052-4af0-9fa5-1e1bff41ea05",
    "metadata": {},
    "outputs": [],
@@ -1400,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 52,
    "id": "2673a20c-eb88-4f9f-abc2-02a19b2b9e64",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1423,7 @@
        "16557"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 53,
    "id": "d5baf2c0-7172-4b81-b813-fcffb5d1d0ca",
    "metadata": {
     "scrolled": true
@@ -1452,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 54,
    "id": "f45ad942-5623-42a0-bdf9-56c167f89f6b",
    "metadata": {},
    "outputs": [
@@ -1490,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 55,
    "id": "3fec8515-2f86-4cb9-aa10-ea4d10fb52db",
    "metadata": {},
    "outputs": [],
@@ -1508,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 56,
    "id": "2ac92eab-9a2f-49a4-a83d-d5509b038142",
    "metadata": {},
    "outputs": [
@@ -1729,7 +1742,7 @@
        "True                 6141    2682  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 57,
    "id": "126daca7-b160-4498-8ab1-c8d04a490124",
    "metadata": {
     "scrolled": true
@@ -2040,7 +2053,7 @@
        "36  2024.0             4502              2682"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2054,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 58,
    "id": "19d22809-9819-4a7a-bbb4-5d47412b6b72",
    "metadata": {},
    "outputs": [],
@@ -2064,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 59,
    "id": "d20a7b48-aa62-4779-a91c-a54f3d621891",
    "metadata": {
     "scrolled": true
@@ -2402,7 +2415,7 @@
        "36  2024.0             4502              2682         37.332962"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2413,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 60,
    "id": "00a1002c-3dc6-41f9-b746-e3a8411eec4d",
    "metadata": {},
    "outputs": [],
@@ -2423,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 61,
    "id": "dc2621cf-2927-40e4-990a-023dbeceec8b",
    "metadata": {},
    "outputs": [
