--- a/liver-transplant-findings.ipynb
+++ b/liver-transplant-findings.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 55,
    "id": "4267aac2-51a2-42de-ae1a-b06ac79d4384",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 56,
    "id": "34d4be50-b6e8-45a8-9cef-869c8e49d866",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 57,
    "id": "cf973c4c-005f-4564-8dcf-9f34e90aa7eb",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 58,
    "id": "4a27c8a7-d3ee-48e4-949c-08170b4517cc",
    "metadata": {
     "scrolled": true
@@ -160,7 +160,7 @@
        "4    A1     ABO    C    5"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 59,
    "id": "5b525c05-4ceb-43d7-991f-c39ff45e2607",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 60,
    "id": "8e4cfe19-69b4-42fb-8dfd-454287fdb1f5",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "4           ACADLVLKI     NaN  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 61,
    "id": "5ab39479-33ef-412e-93d7-c8e71bd8772f",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 62,
    "id": "d65014f9-6ba5-4c17-a405-e80b1de7b9b3",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "1167"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 63,
    "id": "acc6a80f-943b-49b8-870a-ab5111654646",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 64,
    "id": "b7607a3f-1723-47c7-a7be-f3de4b36beba",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 65,
    "id": "6ec8a47d-207e-4b9e-b7f2-5732930d5669",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 66,
    "id": "f11d00de-9762-49a0-bbbb-a8048baef6ca",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 67,
    "id": "004e5ba7-065f-47f2-ab5e-9155b5276b53",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 68,
    "id": "a14315df-6177-45ed-a0ed-ef10b84b9aed",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 69,
    "id": "07d689d9-0ac1-4867-b90b-c19bb121b470",
    "metadata": {},
    "outputs": [],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 70,
    "id": "e1185c74-99e2-4999-a128-820c154b4aa5",
    "metadata": {
     "scrolled": true
@@ -538,7 +538,7 @@
        "True"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 71,
    "id": "dc16aa92-0e69-4f8a-aed4-49bf68e249b3",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
        "92             ALL_DGN  Primary diagnosis was not collected on TCR unt...  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 72,
    "id": "1b17eaca-8f62-4298-9542-f20f0cfdebcf",
    "metadata": {},
    "outputs": [
@@ -753,7 +753,7 @@
        "2586  ALCOHOL-ASSOCIATED CIRRHOSIS WITHOUT ACUTE ALC...  LI_DGN    N  4219"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 73,
    "id": "c7d97dd5-758e-4ec1-8543-48fa8d9d78f9",
    "metadata": {},
    "outputs": [],
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 74,
    "id": "9985519f-4982-456a-9e4b-29a99642e97b",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
        "{4215, 4216, 4217, 4218, 4219}"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 75,
    "id": "8fdfc7cb-b58b-4e47-9b6a-4dd5c472aaf7",
    "metadata": {},
    "outputs": [],
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 76,
    "id": "5bf13f65-1b7b-40a9-94e0-d7dbd8a54d24",
    "metadata": {},
    "outputs": [],
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 77,
    "id": "bb2b6f68-8fc2-4c84-8f1c-6449116ce040",
    "metadata": {},
    "outputs": [],
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 78,
    "id": "aa23fc9c-240c-407a-82c8-ac9f58303b8e",
    "metadata": {},
    "outputs": [],
@@ -887,15 +887,13 @@
     "Taylor is 35. Summary stats for `INIT_AGE` for candidates and `AGE_DON` values across the U.S. in this time period:\n",
     "- Candidate age mean: 50.33\n",
     "- Candidate age median: 54.00\n",
-    "- Donor age mean: 38.56\n",
-    "- Donor age median: 39.00\n",
     "\n",
     "Last year (2023), the median age for listed candidate was 56."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 79,
    "id": "be0622c8-0238-4d88-b579-58ee4a67165e",
    "metadata": {},
    "outputs": [
@@ -905,7 +903,7 @@
        "0"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 80,
    "id": "e0f6faa7-9ca7-40bf-b110-ee6f427bee59",
    "metadata": {},
    "outputs": [
@@ -942,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 81,
    "id": "2b24e77f-e9ce-4724-a481-b90be76bcedb",
    "metadata": {},
    "outputs": [
@@ -952,9 +950,7 @@
      "text": [
       "Nationally:\n",
       "  - Candidate age mean: 50.33\n",
-      "  - Candidate age median: 54.00\n",
-      "  - Donor age mean: 38.56\n",
-      "  - Donor age median: 39.00\n"
+      "  - Candidate age median: 54.00\n"
      ]
     }
    ],
@@ -963,14 +959,9 @@
     "age_mean_candidates_us = df_uniq_cands['INIT_AGE'].mean()\n",
     "age_median_candidates_us = df_uniq_cands['INIT_AGE'].median()\n",
     "\n",
-    "age_mean_donor_us = df_uniq_donors['AGE_DON'].mean()\n",
-    "age_median_donor_us = df_uniq_donors['AGE_DON'].median()\n",
-    "\n",
     "age_str = '\\n  - '.join([\n",
     "    f'Candidate age mean: {age_mean_candidates_us:.2f}',\n",
     "    f'Candidate age median: {age_median_candidates_us:.2f}',\n",
-    "    f'Donor age mean: {age_mean_donor_us:.2f}',\n",
-    "    f'Donor age median: {age_median_donor_us:.2f}'\n",
     "])\n",
     "\n",
     "# FINDING\n",
@@ -979,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 82,
    "id": "7597dd0a-f0ae-457a-a4c7-bae41c0bda8c",
    "metadata": {
     "scrolled": true
@@ -1220,7 +1211,7 @@
        "2024.0     56.0  52.025466"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 83,
    "id": "8e2e38e5-7899-4d5e-b7b9-f733c4ad7b6a",
    "metadata": {
     "scrolled": true
@@ -1251,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 84,
    "id": "e6a71552-9219-4f81-b655-4684e7cba985",
    "metadata": {},
    "outputs": [],
@@ -1261,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 86,
    "id": "ac836f81-9732-47db-b6c4-8ff2d0cba88d",
    "metadata": {
     "scrolled": true
@@ -1273,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 87,
    "id": "84b8c81d-d8c2-4e89-91ab-467cb4e3cfae",
    "metadata": {
     "scrolled": true
@@ -1563,7 +1554,7 @@
        "30  2024.0   3705    3481  48.441414"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 88,
    "id": "855f636c-5959-4a95-aab6-6f0e810f98ec",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 89,
    "id": "17ddbf77-9077-4360-90ae-6579bc2504c5",
    "metadata": {},
    "outputs": [],
@@ -1628,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 90,
    "id": "7662e8a2-8667-410b-8b9f-f8949061ce13",
    "metadata": {},
    "outputs": [
@@ -1653,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 91,
    "id": "3fec8515-2f86-4cb9-aa10-ea4d10fb52db",
    "metadata": {},
    "outputs": [],
@@ -1671,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 92,
    "id": "2ac92eab-9a2f-49a4-a83d-d5509b038142",
    "metadata": {
     "scrolled": true
@@ -1747,7 +1738,7 @@
        "4                  1998.0   5620  2266"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 93,
    "id": "126daca7-b160-4498-8ab1-c8d04a490124",
    "metadata": {
     "scrolled": true
@@ -1770,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 94,
    "id": "9ab37e86-0bd1-4b5d-be42-ae50226345de",
    "metadata": {},
    "outputs": [
@@ -1844,7 +1835,7 @@
        "4  1998.0             5620              2266"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1855,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 95,
    "id": "19d22809-9819-4a7a-bbb4-5d47412b6b72",
    "metadata": {},
    "outputs": [],
@@ -1865,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 96,
    "id": "d20a7b48-aa62-4779-a91c-a54f3d621891",
    "metadata": {
     "scrolled": true
@@ -2155,7 +2146,7 @@
        "30  2024.0             4504              2682         37.322572"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2166,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 97,
    "id": "00a1002c-3dc6-41f9-b746-e3a8411eec4d",
    "metadata": {},
    "outputs": [],
@@ -2176,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 98,
    "id": "dc2621cf-2927-40e4-990a-023dbeceec8b",
    "metadata": {},
    "outputs": [
@@ -2208,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 99,
    "id": "67c26d21-5eee-4f7f-a39f-86ae66d21e7b",
    "metadata": {},
    "outputs": [
@@ -2231,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 100,
    "id": "29ac1182-5ff7-41c5-8e69-d77520552b3f",
    "metadata": {},
    "outputs": [],
@@ -2242,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 101,
    "id": "a0f5f408-763b-4a00-8da5-798a9ca1a3d1",
    "metadata": {},
    "outputs": [],
@@ -2259,7 +2250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 102,
    "id": "d6dff031-25d2-4528-b8bb-4cdde9485bd1",
    "metadata": {
     "scrolled": true
@@ -2335,7 +2326,7 @@
        "4  1998.0   1056    1210"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2346,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 103,
    "id": "1e6554ba-056a-40dd-aa2a-e6f7b3040eda",
    "metadata": {
     "scrolled": true
@@ -2358,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 104,
    "id": "925b81bb-8a06-4a8c-bf56-8af528516b8f",
    "metadata": {
     "scrolled": true
@@ -2648,7 +2639,7 @@
        "30  2024.0   1103    1579  58.873975"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
