--- a/liver-transplant-findings.ipynb
+++ b/liver-transplant-findings.ipynb
@@ -888,7 +888,7 @@
     "- Candidate age mean: 50.33\n",
     "- Candidate age median: 54.00\n",
     "\n",
-    "Last year (2023), the median age for listed candidate was 56."
+    "Last year (2023), the median age of a listed candidate was 56."
    ]
   },
   {
