--- a/liver-transplant-findings.ipynb
+++ b/liver-transplant-findings.ipynb
@@ -1602,7 +1602,7 @@
    "id": "45fec515-2445-47da-9dc3-226373b019b4",
    "metadata": {},
    "source": [
-    "### \"Thirty years ago, 25% of patients were listed with an alcohol-related liver disease. By last year, that number had risen to 45%.\""
+    "### \"Thirty years ago, about a quarter of the candidates were listed with an alcohol-related liver disease. Last year, they represented nearly half.\""
    ]
   },
   {
