--- a/liver-transplant-findings.ipynb
+++ b/liver-transplant-findings.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 20240805 - Liver transplant analysis\n",
     "\n",
-    "This notebook has the code necessary to reproduce the couple of data findings in the South Dakota News Watch article, [\"Alcohol's impact: 35, dry and dying while waiting for a transplant,\"](https://www.sdnewswatch.org/chronic-liver-disease-cirrhosis-killing-south-dakota-30-year-olds/) published Aug. 5, 2024.\n",
+    "This notebook has the code necessary to reproduce the data findings related to liver transplants in the South Dakota News Watch article, [\"Alcohol's impact: 35, dry and dying while waiting for a transplant,\"](https://www.sdnewswatch.org/chronic-liver-disease-cirrhosis-killing-south-dakota-30-year-olds/) published Aug. 5, 2024.\n",
     "\n",
     "This article includes findings from analyzing portions of the [UNOS STAR file](https://optn.transplant.hrsa.gov/data/view-data-reports/request-data/). See [README.md](README.md) for more details on the data.\n",
     "\n",
